# myplugin

./: JsonData_MyPlugin.h
.github/workflows/: build_test.yml  test.yml
MyPlugin/: CMakeLists.txt  Data.h  Module.cpp  Module.h  MyPlugin.conf.in  MyPlugin.cpp  MyPlugin.filters  MyPlugin.h  MyPlugin.vcxproj
